# pliteWAVpipeline

./: README.md  README_CN.md  pyproject.toml
benchmark/: benchmark.py  charts.py  spectrogram.py
plitewavpipeline/: __init__.py  caching.py  cli.py  dataset.py  packing.py  slicing.py  utils.py
results/: benchmarkResults.json
results/spectrograms/: verificationSummary.json
scripts/: __init__.py  pipeline.py  verify_pipeline.py
tests/: __init__.py
